<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_bordered_background"
    android:padding="10dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/start_date_filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fromDate"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/start_date_filter_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/end_date_filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/untilDate"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/start_date_filter_layout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/end_date_filter_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/start_time_filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fromTime"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/end_date_filter_layout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/start_time_filter_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/end_time_filter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/untilTime"
            app:endIconMode="clear_text"
            app:layout_constraintTop_toBottomOf="@id/start_time_filter_layout"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/end_time_filter_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="false"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/place_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/end_time_filter_layout"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/list_item_place_button"
            tools:spanCount="5"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/member_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/place_list"
            tools:listitem="@layout/list_item_member_button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>