<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/motion_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_list_scene"
    tools:context=".view.list.ListFragment"
    >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_meeting"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/list_item_meeting"
        />

    <TextView
        android:id="@+id/no_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_meeting"
        android:textColor="@android:color/black"
        android:textSize="@dimen/big_text_size"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_button"
        android:src="@drawable/ic_add"
        app:fabCustomSize="@dimen/fab_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_drawer"
        />

    <include
        android:id="@+id/filter_drawer"
        layout="@layout/drawer_filter"
        />
</androidx.constraintlayout.motion.widget.MotionLayout>