...
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/larger_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/date_and_time"
        app:layout_constraintEnd_toStartOf="@id/delete_meeting"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@id/image"
        tools:text="Meeting A"
        />

    <TextView
        android:id="@+id/date_and_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
